@@ -1,5 +1,11 @@
 2014-01-25  Walter Lee  <walt@tilera.com>
 
+	* config/tilepro/atomic.c (BIT_OFFSET): Define.
+	(__atomic_subword_cmpxchg): Use BIT_OFFSET.
+	(__atomic_subword): Ditto.
+
+2014-01-25  Walter Lee  <walt@tilera.com>
+
 	* config/tilepro/atomic.c (__atomic_do_and_fetch): Add
 	a prefix op argument.
 	(__atomic_nand_fetch_4): Add prefix op.
